--- a/packages/extension/src/sidepanel.html
+++ b/packages/extension/src/sidepanel.html
@@ -6,6 +6,6 @@
 </head>
 <body>
   <div id="app"></div>
-  <script type="module" src="./sidepanel.js"></script>
+  <script type="module" src="./sidepanel.ts"></script>
 </body>
 </html> 
