fix: extension sidepanel and build process - Fix sidepanel opening functionality - Update build script to copy all necessary files - Add proper error handling for sidepanel open

--- a/packages/extension/popup.html
+++ b/packages/extension/popup.html
@@ -74,6 +74,10 @@
     <button class="button" id="clipButton">
       Clip Current Page
     </button>
+
+    <button class="button" id="openSidepanelButton" style="background: #4CAF50;">
+      Open Sidepanel
+    </button>
   </div>
   
   <script src="popup.js"></script>
