--- a/packages/extension/popup.html
+++ b/packages/extension/popup.html
@@ -127,6 +127,8 @@
       text-align: center;
     }
   </style>
+  <script type="module" crossorigin src="/assets/popup-D47h6ZhA.js"></script>
+  <link rel="modulepreload" crossorigin href="/assets/modulepreload-polyfill-B5Qt9EMX.js">
 </head>
 <body>
   <div class="container">
@@ -164,6 +166,5 @@
     </div>
   </div>
   
-  <script src="popup.js"></script>
 </body>
 </html>
