--- a/packages/extension/src/popup/index.html
+++ b/packages/extension/src/popup/index.html
@@ -164,6 +164,6 @@
     </div>
   </div>
   
-  <script src="popup.js"></script>
+  <script type="module" src="popup.js"></script>
 </body>
 </html>
