Reflect all deletions, additions, and modifications. Workspace fully synced.

--- a/packages/extension/src/popup/index.html
+++ b/packages/extension/src/popup/index.html
@@ -127,6 +127,7 @@
       text-align: center;
     }
   </style>
+  <script type="module" src="./popup.js"></script>
 </head>
 <body>
   <div class="container">
@@ -164,6 +165,5 @@
     </div>
   </div>
   
-  <script type="module" src="popup.js"></script>
 </body>
 </html>
