--- a/packages/extension/src/sidepanel/index.html
+++ b/packages/extension/src/sidepanel/index.html
@@ -21,9 +21,9 @@
       white-space: pre-wrap;
     }
   </style>
+  <script type="module" src="./sidepanel.js"></script>
 </head>
 <body>
   <div id="root"></div>
-  <script type="module" src="sidepanel.js"></script>
 </body>
 </html> 
